# picova

./: .gitignore  .gitmodules  LICENSE.md  README.md  power_scope.py  requirements.txt
picova-c/: CMakeLists.txt  FreeRTOSConfig.h  display.c  display.h  ina219.c  ina219.h  main.c
picova-c/.devcontainer/: Containerfile  devcontainer.json
picova-ui/: App.axaml  App.axaml.cs  PicovaUI.csproj  Program.cs  ViewLocator.cs
picova-ui/IO/: MeasurementReader.cs
picova-ui/Models/: Filter.cs  Measurement.cs
picova-ui/ViewModels/: MainWindowViewModel.cs  MeasurementPlotViewModel.cs  ViewModelBase.cs
picova-ui/Views/: MainWindow.axaml  MainWindow.axaml.cs  MeasurementPlotView.axaml  MeasurementPlotView.axaml.cs
picova-upy/: ina219.py  main.py
